; ModuleID = '/home/carl/AnghaBench/skynet/service-src/extr_service_harbor.c_harbor_id.c'
source_filename = "/home/carl/AnghaBench/skynet/service-src/extr_service_harbor.c_harbor_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.harbor = type { %struct.slave* }
%struct.slave = type { i32 }

@REMOTE_MAX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.harbor*, i32)* @harbor_id to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @harbor_id(%struct.harbor* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.harbor*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.slave*, align 8
  store %struct.harbor* %0, %struct.harbor** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 1, i32* %6, align 4
  br label %8

8:                                                ; preds = %27, %2
  %9 = load i32, i32* %6, align 4
  %10 = load i32, i32* @REMOTE_MAX, align 4
  %11 = icmp slt i32 %9, %10
  br i1 %11, label %12, label %30

12:                                               ; preds = %8
  %13 = load %struct.harbor*, %struct.harbor** %4, align 8
  %14 = getelementptr inbounds %struct.harbor, %struct.harbor* %13, i32 0, i32 0
  %15 = load %struct.slave*, %struct.slave** %14, align 8
  %16 = load i32, i32* %6, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds %struct.slave, %struct.slave* %15, i64 %17
  store %struct.slave* %18, %struct.slave** %7, align 8
  %19 = load %struct.slave*, %struct.slave** %7, align 8
  %20 = getelementptr inbounds %struct.slave, %struct.slave* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load i32, i32* %5, align 4
  %23 = icmp eq i32 %21, %22
  br i1 %23, label %24, label %26

24:                                               ; preds = %12
  %25 = load i32, i32* %6, align 4
  store i32 %25, i32* %3, align 4
  br label %31

26:                                               ; preds = %12
  br label %27

27:                                               ; preds = %26
  %28 = load i32, i32* %6, align 4
  %29 = add nsw i32 %28, 1
  store i32 %29, i32* %6, align 4
  br label %8

30:                                               ; preds = %8
  store i32 0, i32* %3, align 4
  br label %31

31:                                               ; preds = %30, %24
  %32 = load i32, i32* %3, align 4
  ret i32 %32
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
